yaml-examples/lidarr/lidarr-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: lidarr
  namespace: default
  labels:
    app: lidarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lidarr
  template:
    metadata:
      labels:
        app: lidarr
    spec:
      containers:
      - name: lidarr
        image: linuxserver/lidarr:nightly
        imagePullPolicy: Always
        resources:
          requests:
            memory: "2Gi"
            cpu: ".5"
        ports:
          - containerPort: 8686
        volumeMounts:
          - mountPath: /config
            name: config
          - mountPath: /downloads
            name: downloads
          - mountPath: /music
            name: music
        livenessProbe:
          httpGet:
            port: 8686
            path: /
            httpHeaders:
              - name: Liveness-Header
                value: Readarr-Probe
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 3
      volumes:
      -  name: config
         persistentVolumeClaim:
          claimName: lidarr
      - name: downloads
        hostPath:
          path: /mnt/share/Downloads
      - name: music
        hostPath:
          path: /mnt/share/Music
