yaml-examples/lidarr/lidarr-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lidarr
  namespace: default
spec:
  rules:
  - host: lidarr.lan
    http:
      paths:
      - backend:
          service:
            name: lidarr
            port:
              number: 8686
        path: /
        pathType: ImplementationSpecific
